# Spatial-Grid-Partitioning

./: .gitignore  CMakeLists.txt  README.md
headers/: grid_pointer.h  verlet.h  verlet_grid.h  world.h
src/: event.h  grid.cpp  rainbow.h  renderer.h
utils/: constants.h  math.h  random.h
